# Utility

./: Algorithm.h  AutoClearingContainer.h  CMakeLists.txt  ChromeTracing.cpp  ChromeTracing.h  CircularBuffer.h  Colour.cpp  Colour.h  Concepts.h  CppEasySerDes.cmake  CppPerfettoTrace.cmake  Energy.h  FormatHelpers.h  JsonHelpers.cpp  JsonHelpers.h  JsonPolymorphicSerialisationHelper.h  JsonSerialisationHelper.h  MathConstants.h  MinMax.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkConnector.cpp  NeuralNetworkConnector.h  QuadTree.h  Random.h  Range.h  RangeConverter.cpp  RangeConverter.h  RollingStatistics.cpp  RollingStatistics.h  Shape.h  SpatialMap.h  Transform.cpp  Transform.h  TypeName.h  WindowedFrequencyStatistics.cpp  WindowedFrequencyStatistics.h  WindowedRollingStatistics.cpp  WindowedRollingStatistics.h  catch2.cmake  (+2 more)
test/: CMakeLists.txt  TestAlgorithm.cpp  TestAutoClearingContainer.cpp  TestCircularBuffer.cpp  TestColour.cpp  TestJsonHelpers.cpp  TestJsonPolymorphicSerialisationHelper.cpp  TestJsonPolymorphicSerialisationHelper.h  TestJsonSerialisationHelper.cpp  TestNeuralNetwork.cpp  TestQuadTree.cpp  TestRandom.cpp  TestRangeConverter.cpp  TestRollingStatistics.cpp  TestShape.cpp  TestSpatialMap.cpp  TestTransform.cpp  TestTypeName.cpp  TestWindowedFrequencyStatistics.cpp  TestWindowedRollingStatistics.cpp  main.cpp  testJsonPolymorphicSerialisationHelper.cpp  testJsonSerialisationHelper.cpp  testJsonSerialisationHelper.h
